k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vss-blueprint
  labels:
    name: vss-blueprint
